--- a/net_worm/src/main/resources/application.properties
+++ b/net_worm/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #server.servlet.context-path=/
 #net.worm.test=hello world123
 #logging.file=D:/net_worm Log
-logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web=DEBUG
 
 #Spring Boot datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/net_worm?useUnicode=true&characterEncoding=utf-8  
@@ -38,5 +38,5 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 #spring.datasource.useGlobalDataSourceStat=true 
 
 #mybatis
-#mybatis.mapper-locations=classpath*:cn/g_open/net_worm/db/mapper/*Mapper.xml
-#mybatis.type-aliases-package=cn.g_open.net_worm.db.model
+mybatis.mapper-locations=classpath*:cn/g_open/net_worm/db/mapper/*Mapper.xml
+mybatis.type-aliases-package=cn.g_open.net_worm.db.model
