--- a/net_worm/src/main/resources/application.properties
+++ b/net_worm/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #server.servlet.context-path=/
 #net.worm.test=hello world123
 #logging.file=D:/net_worm Log
-#logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 #Spring Boot datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/net_worm?useUnicode=true&characterEncoding=utf-8  
