--- a/net_worm/src/main/resources/application.properties
+++ b/net_worm/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 #server.servlet.context-path=/
 #net.worm.test=hello world123
 #logging.file=D:/net_worm Log
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=ERROR
 
 #Spring Boot datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/net_worm?useUnicode=true&characterEncoding=utf-8  
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=gjh
+spring.datasource.username=root
 spring.datasource.password=P@55w0rd
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.tomcat.data-source=com.alibaba.druid.pool.DruidDataSource
